[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Disparo.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Brujo/Shot/shot-hit-1-enemigo.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Brujo/Shot/shot-hit-2-enemigo.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Brujo/Shot/shot-hit-3-enemigo.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Brujo/Shot/wizard shot 01.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Brujo/Shot/wizard shot 02.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": false,
"name": "Destruir",
"speed": 12.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "Disparar",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27.8, 16 )

[node name="DisparoEnemigo" type="Area2D" groups=[
"enemigo",
]]
position = Vector2( 0, 1 )
collision_layer = 32
collision_mask = 1025
script = ExtResource( 1 )

[node name="SpriteDisparo" type="AnimatedSprite" parent="."]
position = Vector2( -59.8, 0 )
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "Disparar"
offset = Vector2( 0.6, 0.6 )

[node name="ColisionDisparo" type="CollisionShape2D" parent="."]
position = Vector2( -83, -1 )
shape = SubResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_Disparo_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Disparo_body_entered"]
[connection signal="animation_finished" from="SpriteDisparo" to="." method="_on_SpriteDisparo_animation_finished"]
